@@ -22,6 +22,7 @@ t/page_links_content.t
 t/page_links_ok.t
 t/pod-coverage.t
 t/pod.t
+t/stuff_inputs.html
 t/stuff_inputs.t
 t/submit_form_ok.t
 
